log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:22:11 PM UTC 2026: 
 graph.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:53:21: error: implicit declaration of function ‘search_map’ [-Wimplicit-function-declaration]
   53 |     MapPair *pair = search_map(g -> adjacencyMap, (void *)label1);
      |                     ^~~~~~~~~~
graph.c:53:21: error: initialization of ‘MapPair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
graph.c:54:22: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   54 |     if(pair == NULL) return;
      |                      ^~~~~~
graph.c:51:5: note: declared here
   51 | int getWeight(Graph* g, const char* label1, const char* label2) {
      |     ^~~~~~~~~
graph.c:56:21: error: invalid use of incomplete typedef ‘List’
   56 |     while(listaEdge -> current == NULL){
      |                     ^~
graph.c:57:29: error: invalid use of incomplete typedef ‘List’
   57 |         if(strcmp(listaEdge -> current, label2)){
      |                             ^~
graph.c:58:30: error: invalid use of incomplete typedef ‘List’
   58 |             return listaEdge -> current;
      |                              ^~
b42bba1
Thu May 14 08:22:31 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:53:21: error: implicit declaration of function ‘search_map’ [-Wimplicit-function-declaration]
   53 |     MapPair *pair = search_map(g -> adjacencyMap, (void *)label1);
      |                     ^~~~~~~~~~
graph.c:53:21: error: initialization of ‘MapPair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
graph.c:54:29: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   54 |     if(pair == NULL) return NULL;
      |                             ^~~~
graph.c:56:21: error: invalid use of incomplete typedef ‘List’
   56 |     while(listaEdge -> current == NULL){
      |                     ^~
graph.c:57:29: error: invalid use of incomplete typedef ‘List’
   57 |         if(strcmp(listaEdge -> current, label2)){
      |                             ^~
graph.c:58:30: error: invalid use of incomplete typedef ‘List’
   58 |             return listaEdge -> current;
      |                              ^~
b33bdee
Thu May 14 08:23:02 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:54:29: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   54 |     if(pair == NULL) return NULL;
      |                             ^~~~
graph.c:56:21: error: invalid use of incomplete typedef ‘List’
   56 |     while(listaEdge -> current == NULL){
      |                     ^~
graph.c:57:29: error: invalid use of incomplete typedef ‘List’
   57 |         if(strcmp(listaEdge -> current, label2)){
      |                             ^~
graph.c:58:30: error: invalid use of incomplete typedef ‘List’
   58 |             return listaEdge -> current;
      |                              ^~
8d9b866
Thu May 14 08:28:51 PM UTC 2026: 
 graph.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:56:18: error: implicit declaration of function ‘list_fist’; did you mean ‘list_first’? [-Wimplicit-function-declaration]
   56 |     Edge *edge = list_fist(listaEdge);
      |                  ^~~~~~~~~
      |                  list_first
graph.c:56:18: error: initialization of ‘Edge *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
graph.c:61:23: error: expected expression before ‘)’ token
   61 |         edge = (edge *)list_next(listaEdge);
      |                       ^
da727e2
Thu May 14 08:29:12 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:61:23: error: expected expression before ‘)’ token
   61 |         edge = (edge *)list_next(listaEdge);
      |                       ^
6bd98f3
Thu May 14 08:29:35 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
af21223
Thu May 14 08:30:44 PM UTC 2026: 
 graph.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
========================================
44ffcb1
Sun May 17 12:56:23 AM UTC 2026: 
 graph.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:35:38: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   35 |     if(map_search(g -> adjacencyMap, label) != NULL) return;
      |                                      ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:36:5: error: variable ‘adjacencyList’ has initializer but incomplete type
   36 |     List adjacencyList = create_list();
      |     ^~~~
graph.c:36:26: error: implicit declaration of function ‘create_list’ [-Wimplicit-function-declaration]
   36 |     List adjacencyList = create_list();
      |                          ^~~~~~~~~~~
graph.c:36:10: error: storage size of ‘adjacencyList’ isn’t known
   36 |     List adjacencyList = create_list();
      |          ^~~~~~~~~~~~~
graph.c:37:35: error: passing argument 2 of ‘map_insert’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   37 |     map_insert(g -> adjacencyMap, label, adjacencyList);
      |                                   ^~~~~
map.h:18:33: note: expected ‘void *’ but argument is of type ‘const char *’
   18 | void map_insert(Map *map, void *key, void *value);
      |                           ~~~~~~^~~
graph.c:36:10: error: unused variable ‘adjacencyList’ [-Werror=unused-variable]
   36 |     List adjacencyList = create_list();
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
e2957ef
